fix: flickering of top users card in right panel

--- a/src/styles/subsocial.scss
+++ b/src/styles/subsocial.scss
@@ -2239,6 +2239,12 @@ hr {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .xl-hidden {
+    display: none !important;
+  }
+}
+
 .\!FontTiny {
   font-size: $font_tiny !important;
 }
